[tool.poetry]
name = "ardennes"
version = "0.1.0"
description = ""
authors = ["Derek Strobel <dnstrobel000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.3"
typer = "^0.6.1"
rich = "^12.5.1"
aio-pika = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
